--- a/public/global.css
+++ b/public/global.css
@@ -101,6 +101,10 @@
   margin: 0;
 }
 
+*:focus {
+  outline: none;
+}
+
 html, body {
   width: 100%;
   height: 100%;
@@ -421,20 +425,27 @@ object {
 .projects {
   & .projects-cards {
     flex: 1;
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    row-gap: calc(var(--rythm) * 6);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  & li:not(:first-child) {
+    margin-top: calc(var(--rythm) * 6);
+  }
+
+  & img {
+    height: 180px;
+    display: block;
+    border-top-right-radius: var(--border-radius);
+    border-top-left-radius: var(--border-radius);
   }
 
   & .project-card {
     display: flex;
     flex-direction: column;
-    margin: 0 auto;
     width: 320px;
-
-    & .project-thumbnail {
-      position: relative;
-    }
 
     & a {
       text-decoration: none;
@@ -443,46 +454,49 @@ object {
         text-decoration: underline;
       }
     }
+  }
 
-    & img {
-      height: 180px;
-      display: block;
-      border-top-right-radius: var(--border-radius);
-      border-top-left-radius: var(--border-radius);
-    }
+  & .project-thumbnail {
+    position: relative;
+  }
 
-    & .project-overlay {
-      height: 180px;
-      border-top-right-radius: var(--border-radius);
-      border-top-left-radius: var(--border-radius);
-    }
+  & .project-overlay {
+    height: 180px;
+    border-top-right-radius: var(--border-radius);
+    border-top-left-radius: var(--border-radius);
+  }
 
-    & .project-link {
-      display: block;
-      margin: calc(var(--rythm) * 2) 0;
-    }
+  & .project-link {
+    display: block;
+    margin: calc(var(--rythm) * 2) 0;
   }
 }
 
 @media only screen and (min-width: 1169px) {
   .projects {
     & .projects-cards {
-      grid-template-columns: repeat(3, 1fr);
+      flex-direction: row;
+      align-items: flex-start;
+    }
+
+    & li:not(:first-child) {
+      margin-top: 0;
     }
 
     & .project-card {
       padding: 0;
     }
   }
-
 }
 
 /* Clients */
 .clients {
   & .clients-cards {
     flex: 1;
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
   }
 
   & object {
@@ -493,7 +507,7 @@ object {
 @media only screen and (min-width: 1169px) {
   .clients {
     & .clients-cards {
-      grid-template-columns: repeat(3, 1fr);
+      flex-direction: row;
     }
   }
 }
@@ -527,6 +541,39 @@ object {
     & .MuiSvgIcon-fontSizeMedium {
       width: calc(var(--rythm) * 15);
       height: calc(var(--rythm) * 15);
+    }
+  }
+}
+
+/* Contact CTA */
+.contact-cta {
+  & .content {
+    background-color: var(--grey-seasalt);
+    border-radius: var(--border-radius);
+    display: grid;
+    align-items: center;
+    grid-template-columns: repeat(1, 1fr);
+    justify-content: space-between;
+    padding: calc(var(--rythm) * 4);
+    text-align: center;
+
+    & :last-child {
+      margin-top: calc(var(--rythm) * 3);
+    }
+  }
+}
+
+@media only screen and (min-width: 1169px) {
+  .contact-cta {
+    & .content {
+      grid-template-columns: repeat(3, 1fr);
+      padding: calc(var(--rythm) * 8);
+      text-align: left;
+      gap: calc(var(--rythm) * 2);
+
+      & :last-child {
+        margin-top: 0;
+      }
     }
   }
 }
@@ -696,6 +743,7 @@ object {
 .footer {
   max-width: var(--max-width);
   margin: calc(var(--rythm) * 3);
+  padding-bottom: calc(var(--rythm) * 6);
   box-shadow: inset 0px 1px 0px 0px var(--grey-lavander-web);
 
   & a {
