Add project page. Reorder CSS styles

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,6 +23,7 @@ export interface Props {
 		<meta name="robots" content="noindex">
 
 		<meta name="color-scheme" content="light">
+		<link rel="stylesheet" href="/splide.min.css">
 		<link rel="stylesheet" href="/normalize.css">
 		<link rel="stylesheet" href="/global.css">
 
@@ -31,6 +32,9 @@ export interface Props {
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+
+		<!-- Slider -->
+		<script is:inline src="/splide.min.js"></script>
 
 		<!-- Fonts -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
