--- a/src/pages/[...locale]/about.astro
+++ b/src/pages/[...locale]/about.astro
@@ -47,7 +47,7 @@ export { getStaticPaths };
 
         <div set:html={t('about.content2')} /> 
 
-        <a href={routes.contact({ locale })} class="btn">
+        <a href={routes.contact({ locale })} class="btn full-width">
           {t('about.btn')}
         </a>
       </div>
