--- a/src/pages/[...locale]/contact.astro
+++ b/src/pages/[...locale]/contact.astro
@@ -68,7 +68,7 @@ export { getStaticPaths };
         <div class="input-container">
           <input type="hidden" id="date" name="date" value="" />
 
-          <button type="submit" id="submit" class="btn">
+          <button type="submit" id="submit" class="btn full-width">
             {t('contact.btn')}
           </button>
         </div>
