--- a/src/pages/[...locale]/index.astro
+++ b/src/pages/[...locale]/index.astro
@@ -40,12 +40,12 @@ export { getStaticPaths };
       <h2 class="text-xlarge" set:html={t('home.hero')} />
     </div>
 
-    <a href="#projects-anchor">
+    <a href="#go-to-content">
       <ExpandMore />
     </a>
   </section>
 
-  <a id="projects-anchor"></a>
+  <a id="go-to-content"></a>
   <section id="featured" class="section projects">
     <div class="title">
       <p class="text-title text-uppercase">{t('home.featured.title')}</p>
