title -> name, description -> summary

--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -2,9 +2,7 @@
 import PlayCircleOutlineRoundedIcon from '@mui/icons-material/PlayCircleOutlineRounded';
 import ImageOutlinedIcon from '@mui/icons-material/ImageOutlined';
 
-const { imageSrc, year, client, projectUrl } = Astro.props;
-const name = Astro.props.name || Astro.props.title;
-const summary = Astro.props.summary || Astro.props.description;
+const { imageSrc, name, summary, year, client, projectUrl } = Astro.props;
 const videoUrl = Astro.props.videoUrl;
 ---
 
