--- a/src/pages/[...locale]/index.astro
+++ b/src/pages/[...locale]/index.astro
@@ -153,8 +153,8 @@ export { getStaticPaths };
         <li>
           <ProjectCard
             imageSrc={magicWords.imageSrc}
-            title={magicWords.title}
-            description={magicWords.description}
+            name={magicWords.name}
+            summary={magicWords.summary}
             year={magicWords.year}
             client={magicWords.client}
             projectUrl={magicWords.projectUrl}
@@ -163,8 +163,8 @@ export { getStaticPaths };
         <li>
           <ProjectCard
             imageSrc="/projects/midot-power-kids.jpg"
-            title="Midot Power Kids"
-            description="Lorem Ipsum"
+            name="Midot Power Kids"
+            summary="Lorem Ipsum"
             year="2022"
             client="Tutorah Kids"
             projectUrl=""
@@ -173,8 +173,8 @@ export { getStaticPaths };
         <li>
           <ProjectCard
             imageSrc="/projects/milly-cohen-tales.jpg"
-            title="Cuentos de Mily Cohen"
-            description="Lorem Ipsum"
+            name="Cuentos de Mily Cohen"
+            summary="Lorem Ipsum"
             year="2021"
             client="Tutorah Kids"
             projectUrl=""
